--- a/dashboardv2/package.json
+++ b/dashboardv2/package.json
@@ -56,7 +56,8 @@
     "requirejs-text": "2.0.15",
     "select2": "4.0.3",
     "table-dragger": "1.0.2",
-    "underscore": "1.8.3"
+    "underscore": "1.8.3",
+    "js-beautify": "1.6.14"
   },
   "devDependencies": {
     "grunt": "1.0.2",
