--- a/graphdb/api/pom.xml
+++ b/graphdb/api/pom.xml
@@ -49,7 +49,7 @@
         <dependency>
             <groupId>org.apache.tinkerpop</groupId>
             <artifactId>gremlin-core</artifactId>
-            <version>${tinkerpop.version}</version>
+            <version>3.3.3</version>
         </dependency>
     </dependencies>
 
