--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -119,6 +119,12 @@
             <groupId>org.apache.atlas</groupId>
             <artifactId>atlas-janusgraph-hbase2</artifactId>
             <version>${project.version}</version>
+            <exclusions>
+              <exclusion>
+                <groupId>org.noggit</groupId>
+                <artifactId>noggit</artifactId>
+              </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
