--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,9 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
 
     <parent>
         <groupId>org.apache</groupId>
@@ -31,7 +33,7 @@
     <description>Metadata Management and Data Governance Platform over Hadoop</description>
     <name>apache-atlas</name>
     <packaging>pom</packaging>
-    <url>http://atlas.apache.org</url>
+    <url>https://atlas.apache.org</url>
 
     <licenses>
         <license>
@@ -42,7 +44,7 @@
 
     <organization>
         <name>Apache Software Foundation</name>
-        <url>http://www.apache.org</url>
+        <url>https://www.apache.org</url>
     </organization>
 
     <issueManagement>
@@ -63,21 +65,21 @@
             <subscribe>dev-subscribe@atlas.apache.org</subscribe>
             <unsubscribe>dev-unsubscribe@atlas.apache.org</unsubscribe>
             <post>dev@atlas.apache.org</post>
-            <archive>http://mail-archives.apache.org/mod_mbox/atlas-dev/</archive>
+            <archive>https://mail-archives.apache.org/mod_mbox/atlas-dev/</archive>
         </mailingList>
         <mailingList>
             <name>atlas-user</name>
             <subscribe>user-subscribe@atlas.apache.org</subscribe>
             <unsubscribe>user-unsubscribe@atlas.apache.org</unsubscribe>
             <post>user@atlas.apache.org</post>
-            <archive>http://mail-archives.apache.org/mod_mbox/atlas-user/</archive>
+            <archive>https://mail-archives.apache.org/mod_mbox/atlas-user/</archive>
         </mailingList>
         <mailingList>
             <name>atlas-commits</name>
             <subscribe>commits-subscribe@atlas.apache.org</subscribe>
             <unsubscribe>commits-unsubscribe@atlas.apache.org</unsubscribe>
             <post>commits@atlas.apache.org</post>
-            <archive>http://mail-archives.apache.org/mod_mbox/atlas-commits/</archive>
+            <archive>https://mail-archives.apache.org/mod_mbox/atlas-commits/</archive>
         </mailingList>
     </mailingLists>
 
@@ -99,7 +101,7 @@
                 <role>PMC</role>
             </roles>
             <organization>Target Inc.</organization>
-            <!--<organizationUrl>http://www.target.com</organizationUrl>-->
+            <!--<organizationUrl>https://www.target.com</organizationUrl>-->
         </developer>
         <developer>
             <id>AAhn</id>
@@ -122,7 +124,7 @@
                 <role>PMC</role>
             </roles>
             <organization>Hortonworks Inc.</organization>
-            <!--<organizationUrl>http://www.hortonworks.com</organizationUrl>-->
+            <!--<organizationUrl>https://www.hortonworks.com</organizationUrl>-->
         </developer>
         <developer>
             <id>acmurthy</id>
@@ -134,7 +136,7 @@
                 <role>PMC</role>
             </roles>
             <organization>Hortonworks Inc.</organization>
-            <!--<organizationUrl>http://www.hortonworks.com</organizationUrl>-->
+            <!--<organizationUrl>https://www.hortonworks.com</organizationUrl>-->
         </developer>
         <developer>
             <id>ayubpathan</id>
@@ -146,7 +148,7 @@
                 <role>PMC</role>
             </roles>
             <organization>Hortonworks Inc.</organization>
-            <!--<organizationUrl>http://www.hortonworks.com</organizationUrl>-->
+            <!--<organizationUrl>https://www.hortonworks.com</organizationUrl>-->
         </developer>
         <developer>
             <id>amestry</id>
@@ -157,7 +159,7 @@
                 <role>committer</role>
             </roles>
             <organization>Hortonworks Inc.</organization>
-            <!--<organizationUrl>http://www.hortonworks.com</organizationUrl>-->
+            <!--<organizationUrl>https://www.hortonworks.com</organizationUrl>-->
         </developer>
         <developer>
             <id>bstortz</id>
@@ -169,7 +171,7 @@
                 <role>PMC</role>
             </roles>
             <organization>SAP Inc.</organization>
-            <!--<organizationUrl>http://www.sap.com</organizationUrl>-->
+            <!--<organizationUrl>https://www.sap.com</organizationUrl>-->
         </developer>
         <developer>
             <id>chyzer</id>
@@ -181,7 +183,7 @@
                 <role>PMC</role>
             </roles>
             <organization>Aetna Inc.</organization>
-            <!--<organizationUrl>http://www.aetna.com</organizationUrl>-->
+            <!--<organizationUrl>https://www.aetna.com</organizationUrl>-->
         </developer>
         <developer>
             <id>dmarkwat</id>
@@ -193,7 +195,7 @@
                 <role>PMC</role>
             </roles>
             <organization>Aetna Inc.</organization>
-            <!--<organizationUrl>http://www.aetna.com</organizationUrl>-->
+            <!--<organizationUrl>https://www.aetna.com</organizationUrl>-->
         </developer>
         <developer>
             <id>darshankumar</id>
@@ -215,7 +217,7 @@
                 <role>committer</role>
             </roles>
             <organization>IBM Corporation</organization>
-            <!--<organizationUrl>http://www.ibm.com</organizationUrl>-->
+            <!--<organizationUrl>https://www.ibm.com</organizationUrl>-->
         </developer>
         <developer>
             <id>dkantor</id>
@@ -227,7 +229,7 @@
                 <role>PMC</role>
             </roles>
             <organization>IBM Corporation</organization>
-            <!--<organizationUrl>http://www.ibm.com</organizationUrl>-->
+            <!--<organizationUrl>https://www.ibm.com</organizationUrl>-->
         </developer>
         <developer>
             <id>dkaspar</id>
@@ -239,7 +241,7 @@
                 <role>PMC</role>
             </roles>
             <organization>Merck &amp; Co Inc.</organization>
-            <!--<organizationUrl>http://www.merck.com</organizationUrl>-->
+            <!--<organizationUrl>https://www.merck.com</organizationUrl>-->
         </developer>
         <developer>
             <id>dfusaro</id>
@@ -251,7 +253,7 @@
                 <role>PMC</role>
             </roles>
             <organization>Aetna Inc.</organization>
-            <!--<organizationUrl>http://www.aetna.com</organizationUrl>-->
+            <!--<organizationUrl>https://www.aetna.com</organizationUrl>-->
         </developer>
         <developer>
             <id>grahamwallis</id>
@@ -262,7 +264,7 @@
                 <role>committer</role>
             </roles>
             <organization>IBM Corporation</organization>
-            <!--<organizationUrl>http://www.ibm.com</organizationUrl>-->
+            <!--<organizationUrl>https://www.ibm.com</organizationUrl>-->
         </developer>
         <developer>
             <id>gsenia</id>
@@ -274,7 +276,7 @@
                 <role>PMC</role>
             </roles>
             <organization>Aetna Inc.</organization>
-            <!--<organizationUrl>http://www.aetna.com</organizationUrl>-->
+            <!--<organizationUrl>https://www.aetna.com</organizationUrl>-->
         </developer>
         <developer>
             <id>rhbutani</id>
@@ -285,8 +287,8 @@
                 <role>committer</role>
                 <role>PMC</role>
             </roles>
-            <organization />
-            <!--<organizationUrl>http://www.hortonworks.com</organizationUrl>-->
+            <organization/>
+            <!--<organizationUrl>https://www.hortonworks.com</organizationUrl>-->
         </developer>
         <developer>
             <id>yhemanth</id>
@@ -298,7 +300,7 @@
                 <role>PMC</role>
             </roles>
             <organization>Hortonworks Inc.</organization>
-            <!--<organizationUrl>http://www.hortonworks.com</organizationUrl>-->
+            <!--<organizationUrl>https://www.hortonworks.com</organizationUrl>-->
         </developer>
         <developer>
             <id>ilasek</id>
@@ -310,7 +312,7 @@
                 <role>PMC</role>
             </roles>
             <organization>Merck &amp; Co Inc.</organization>
-            <!--<organizationUrl>http://www.merck.com</organizationUrl>-->
+            <!--<organizationUrl>https://www.merck.com</organizationUrl>-->
         </developer>
         <developer>
             <id>jnhagelberg</id>
@@ -322,7 +324,7 @@
                 <role>PMC</role>
             </roles>
             <organization>IBM Corporation</organization>
-            <!--<organizationUrl>http://www.ibm.com</organizationUrl>-->
+            <!--<organizationUrl>https://www.ibm.com</organizationUrl>-->
         </developer>
         <developer>
             <id>jitendra</id>
@@ -334,7 +336,7 @@
                 <role>PMC</role>
             </roles>
             <organization>Hortonworks Inc.</organization>
-            <!--<organizationUrl>http://www.hortonworks.com</organizationUrl>-->
+            <!--<organizationUrl>https://www.hortonworks.com</organizationUrl>-->
         </developer>
         <developer>
             <id>jmaron</id>
@@ -379,7 +381,7 @@
                 <role>PMC</role>
             </roles>
             <organization>Hortonworks Inc.</organization>
-            <!--<organizationUrl>http://www.hortonworks.com</organizationUrl>-->
+            <!--<organizationUrl>https://www.hortonworks.com</organizationUrl>-->
         </developer>
         <developer>
             <id>mandy</id>
@@ -390,7 +392,7 @@
                 <role>committer</role>
             </roles>
             <organization>IBM Corporation</organization>
-            <!--<organizationUrl>http://www.ibm.com</organizationUrl>-->
+            <!--<organizationUrl>https://www.ibm.com</organizationUrl>-->
         </developer>
         <developer>
             <id>mschussler</id>
@@ -402,7 +404,7 @@
                 <role>PMC</role>
             </roles>
             <organization>JPMC</organization>
-            <!--<organizationUrl>http://</organizationUrl>-->
+            <!--<organizationUrl>https://</organizationUrl>-->
         </developer>
         <developer>
             <id>guptaneeru</id>
@@ -414,7 +416,7 @@
                 <role>PMC</role>
             </roles>
             <organization>IBM Corporation</organization>
-            <!--<organizationUrl>http://www.ibm.com</organizationUrl>-->
+            <!--<organizationUrl>https://www.ibm.com</organizationUrl>-->
         </developer>
         <developer>
             <id>nixon</id>
@@ -436,7 +438,7 @@
                 <role>committer</role>
             </roles>
             <organization>Hortonworks Inc.</organization>
-            <!--<organizationUrl>http://www.hortonworks.com</organizationUrl>-->
+            <!--<organizationUrl>https://www.hortonworks.com</organizationUrl>-->
         </developer>
         <developer>
             <id>sarath</id>
@@ -448,7 +450,7 @@
                 <role>PMC</role>
             </roles>
             <organization>Hortonworks Inc.</organization>
-            <!--<organizationUrl>http://www.hortonworks.com</organizationUrl>-->
+            <!--<organizationUrl>https://www.hortonworks.com</organizationUrl>-->
         </developer>
         <developer>
             <id>shwethags</id>
@@ -460,7 +462,7 @@
                 <role>PMC</role>
             </roles>
             <organization>Hortonworks Inc.</organization>
-            <!--<organizationUrl>http://www.hortonworks.com</organizationUrl>-->
+            <!--<organizationUrl>https://www.hortonworks.com</organizationUrl>-->
         </developer>
         <developer>
             <id>sriksun</id>
@@ -472,7 +474,7 @@
                 <role>PMC</role>
             </roles>
             <organization>InMobi</organization>
-            <!--<organizationUrl>http://www.inmobi.com</organizationUrl>-->
+            <!--<organizationUrl>https://www.inmobi.com</organizationUrl>-->
         </developer>
         <developer>
             <id>sumasai</id>
@@ -484,7 +486,7 @@
                 <role>PMC</role>
             </roles>
             <organization>Hortonworks Inc.</organization>
-            <!--<organizationUrl>http://www.hortonworks.com</organizationUrl>-->
+            <!--<organizationUrl>https://www.hortonworks.com</organizationUrl>-->
         </developer>
         <developer>
             <id>ssuresh</id>
@@ -496,7 +498,7 @@
                 <role>PMC</role>
             </roles>
             <organization>Hortonworks Inc.</organization>
-            <!--<organizationUrl>http://www.hortonworks.com</organizationUrl>-->
+            <!--<organizationUrl>https://www.hortonworks.com</organizationUrl>-->
         </developer>
         <developer>
             <id>tbeerbower</id>
@@ -519,7 +521,7 @@
                 <role>PMC</role>
             </roles>
             <organization>Hortonworks Inc.</organization>
-            <!--<organizationUrl>http://www.hortonworks.com</organizationUrl>-->
+            <!--<organizationUrl>https://www.hortonworks.com</organizationUrl>-->
         </developer>
         <developer>
             <id>venkatesh</id>
@@ -542,7 +544,7 @@
                 <role>PMC</role>
             </roles>
             <organization>Hortonworks Inc.</organization>
-            <!--<organizationUrl>http://www.hortonworks.com</organizationUrl>-->
+            <!--<organizationUrl>https://www.hortonworks.com</organizationUrl>-->
         </developer>
     </developers>
 
@@ -682,7 +684,7 @@
 
         <!-- Needed for hooks -->
         <aopalliance.version>1.0</aopalliance.version>
-        <jackson.version>2.9.8</jackson.version>
+        <jackson.version>2.9.9</jackson.version>
 
         <!-- Apache commons -->
         <commons-conf.version>1.10</commons-conf.version>
@@ -787,14 +789,14 @@
     <repositories>
         <repository>
             <id>central</id>
-            <url>http://repo1.maven.org/maven2</url>
+            <url>https://repo1.maven.org/maven2</url>
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
         </repository>
         <repository>
             <id>hortonworks.repo</id>
-            <url>http://repo.hortonworks.com/content/repositories/releases</url>
+            <url>https://repo.hortonworks.com/content/repositories/releases</url>
             <name>Hortonworks Repo</name>
             <snapshots>
                 <enabled>false</enabled>
@@ -829,7 +831,7 @@
         <repository>
             <id>typesafe</id>
             <name>Typesafe Repository</name>
-            <url>http://repo.typesafe.com/typesafe/releases/</url>
+            <url>https://repo.typesafe.com/typesafe/releases/</url>
         </repository>
     </repositories>
 
@@ -1744,7 +1746,7 @@
                 <plugin>
                     <groupId>org.apache.rat</groupId>
                     <artifactId>apache-rat-plugin</artifactId>
-                    <version>0.12</version>
+                    <version>0.13</version>
                 </plugin>
 
                 <plugin>
