--- a/graphdb/janus/pom.xml
+++ b/graphdb/janus/pom.xml
@@ -203,6 +203,12 @@
             <classifier>tests</classifier>
             <scope>test</scope>
         </dependency>
+	
+	<dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
