ZipSourceWithBackingDirectory: Implementation for 2.6.4.0
Change-Id: I66a1e459a90b3fd44fe4e3fc8e02bd4aa24ab5bf

--- a/repository/pom.xml
+++ b/repository/pom.xml
@@ -161,6 +161,10 @@
             <version>4.1.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
