--- a/dashboardv2/pom.xml
+++ b/dashboardv2/pom.xml
@@ -77,6 +77,7 @@
                                     <directory>${basedir}</directory>
                                     <includes>
                                         <include>package.json</include>
+                                        <include>package-lock.json</include>
                                         <include>gruntfile.js</include>
                                     </includes>
                                 </resource>
