ATLAS-3378: Update JanusGraph to 0.4.0

--- a/graphdb/api/pom.xml
+++ b/graphdb/api/pom.xml
@@ -46,6 +46,11 @@
             <groupId>org.codehaus.jettison</groupId>
             <artifactId>jettison</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tinkerpop</groupId>
+            <artifactId>gremlin-core</artifactId>
+            <version>${tinkerpop.version}</version>
+        </dependency>
     </dependencies>
 
 
