--- a/pom.xml
+++ b/pom.xml
@@ -654,6 +654,10 @@
         <jetty.version>9.3.14.v20161028</jetty.version>
         <jetty.jsp.version>9.2.12.v20150709</jetty.jsp.version>
         <jersey.version>1.19</jersey.version>
+        <hadoop.version>3.0.0.3.0.0.0-SNAPSHOT</hadoop.version>
+        <hbase.version>2.0.0.3.0.0.0-SNAPSHOT</hbase.version>
+        <solr.version>6.6.1</solr.version>
+        <kafka.version>1.0.0</kafka.version>
         <jsr.version>1.1</jsr.version>
         <elasticsearch.version>5.6.4</elasticsearch.version>
 
@@ -661,11 +665,6 @@
         <tinkerpop.version>3.4.4</tinkerpop.version>
         <lucene-solr.version>7.3.0</lucene-solr.version>
 
-        <hadoop.version>3.1.1</hadoop.version>
-        <hbase.version>2.0.2</hbase.version>
-        <solr.version>7.5.0</solr.version>
-        <hive.version>3.1.0</hive.version>
-        <kafka.version>2.0.0</kafka.version>
         <kafka.scala.binary.version>2.11</kafka.scala.binary.version>
         <curator.version>4.0.1</curator.version>
         <zookeeper.version>3.4.6.3.0.0.0-SNAPSHOT</zookeeper.version>
