--- a/addons/sqoop-bridge/pom.xml
+++ b/addons/sqoop-bridge/pom.xml
@@ -32,7 +32,7 @@
     <properties>
         <!-- maps to 1.4.7-SNAPSHOT version of apache sqoop -->
         <sqoop.version>1.4.6.2.3.99.0-195</sqoop.version>
-        <hive.version>3.0.0.3.0.0.0-SNAPSHOT</hive.version>
+        <hive.version>3.1.0.3.1.4.0-315</hive.version>
     </properties>
 
     <dependencies>
