--- a/addons/storm-bridge/pom.xml
+++ b/addons/storm-bridge/pom.xml
@@ -31,7 +31,7 @@
 
     <properties>
         <storm.version>1.2.0</storm.version>
-        <hive.version>3.0.0.3.0.0.0-SNAPSHOT</hive.version>
+        <hive.version>3.1.0.3.1.4.0-315</hive.version>
     </properties>
 
     <dependencies>
